[package]
name = "argon-stats-backend"
version = "0.1.0"
edition = "2021"
authors = ["Dervex"]
description = "Argon's stats database and API backend"
repository = "https://github.com/argon-rbx/argon-stats-backend"
homepage = "https://argon.wiki"
license = "Apache-2.0"

[lib]
name = "argon"
path = "src/lib.rs"

[[bin]]
name = "pull"
path = "api/pull.rs"

[[bin]]
name = "push"
path = "api/push.rs"

[[bin]]
name = "root"
path = "api/root.rs"

[dependencies]
url = "2.5.0"
redis = "0.25.2"
vercel_runtime = "1.1.1"
struct-util = { version = "*", path = "crates/struct-util" }
tokio = { version = "1.37.0", features = ["macros"] }
serde_json = { version = "1.0.115", features = ["raw_value"] }
serde = { version = "1.0.197", features = ["derive"] }
